--- a/AppartmentSale/Views/Shared/_Layout.cshtml
+++ b/AppartmentSale/Views/Shared/_Layout.cshtml
@@ -18,11 +18,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Продажа квартир", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Продажа квартир", "Index", "Appartment", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Квартиры", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Квартиры", "Index", "Appartment")</li>
+                    <li>@Html.ActionLink("Районы", "Index", "Area")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
