--- a/AppartmentSale/Views/Street/Index.cshtml
+++ b/AppartmentSale/Views/Street/Index.cshtml
@@ -1,7 +1,53 @@
-﻿
+﻿@model PagedList.IPagedList<AppartmentSale.ViewModels.StreetViewModel>
+@using PagedList.Mvc;
+
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 @{
-    ViewBag.Title = "Список";
+    ViewBag.Title = "Список улиц";
 }
 
-<h2>Index</h2>
+<h2>Список квартир</h2>
 
+@Html.ActionLink("Добавить улицу", "CreateArea", "Area", null, new { @class = "btn btn-danger" })
+
+<div class="container" style="margin-top:1rem;">
+    <div class="row">
+        <div class="col-md-12">
+            <table class="table">
+                <tr>
+                    <th>Id</th>
+                    <th>Название</th>
+                    <th>Район</th>
+                </tr>
+
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @item.Id
+                        </td>
+                        <td>
+                            @item.Title
+                        </td>
+                        <th>@item.AreaName</th>
+                        <td>
+                            @Html.ActionLink("Редактирование", "EditArea", "Area", new { id = item.Id }, new { @class = "btn btn-success" })
+                        </td>
+                        <td>
+                            <a href="/Street/Delete/@item.Id" id="deleteStreet" class="btn btn-danger">Удалить</a>
+                        </td>
+                    </tr>
+                }
+
+            </table>
+            <br />
+            Страница @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) из @Model.PageCount
+
+            @Html.PagedListPager(Model, page => Url.Action("Index", "Street" new { page }))
+        </div>
+    </div>
+</div>
+
+@section scripts{
+    <script src="@Url.Content("/Scripts/Javascripts/Area.js")" type="text/javascript"></script>
+}
