Create Street finish

--- a/AppartmentSale/Views/Area/Index.cshtml
+++ b/AppartmentSale/Views/Area/Index.cshtml
@@ -26,7 +26,7 @@
                             @item.Id
                         </td>
                         <td>
-                            @item.Ttile
+                            @item.Title
                         </td>
                         <td>
                             @Html.ActionLink("Редактирование", "EditArea", "Area", new { id = item.Id }, new { @class = "btn btn-success" })
