Create street finished

--- a/AppartmentSale/Views/Shared/_Layout.cshtml
+++ b/AppartmentSale/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Квартиры", "Index", "Appartment")</li>
                     <li>@Html.ActionLink("Районы", "Index", "Area")</li>
+                    <li>@Html.ActionLink("Улицы", "Index", "Street")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
