--- a/AppartmentSale/Views/Street/EditStreet.cshtml
+++ b/AppartmentSale/Views/Street/EditStreet.cshtml
@@ -17,7 +17,7 @@
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(p => p.Areas)
-                    @Html.DropDownListFor(p => p.CurrentAreaId, Model.Areas)
+                    @Html.DropDownListFor(p => p.CurrentAreaId, Model.Areas, new { @class = "form-control" })
                     @Html.ValidationMessageFor(p => p.Areas)
                 </div>
                 <button class="btn btn-success" type="submit">Добавить</button>
