Crud for Type Document Created

--- a/AppartmentSale/Views/Shared/_Layout.cshtml
+++ b/AppartmentSale/Views/Shared/_Layout.cshtml
@@ -25,6 +25,8 @@
                     <li>@Html.ActionLink("Квартиры", "Index", "Appartment")</li>
                     <li>@Html.ActionLink("Районы", "Index", "Area")</li>
                     <li>@Html.ActionLink("Улицы", "Index", "Street")</li>
+                    <li>@Html.ActionLink("Документы", "Index", "TypDocument")</li>
+                    <li>@Html.ActionLink("Владельцы", "Index", "Owner")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
