--- a/AppartmentSale/Views/Area/Index.cshtml
+++ b/AppartmentSale/Views/Area/Index.cshtml
@@ -33,7 +33,7 @@
                         </td>
                         <td>
                             @Html.AntiForgeryToken()
-                            <a href="/Area/DeleteArea/@item.Id" id="deleteArea" class="btn btn-danger">Удалить</a>
+                            <a href="/Area/DeleteArea/@item.Id" id="deleteEntity" class="btn btn-danger">Удалить</a>
                         </td>
                     </tr>
                 }
@@ -48,5 +48,5 @@
 </div>
 
 @section scripts{
-    <script src="@Url.Content("/Scripts/Javascripts/Area.js")" type="text/javascript"></script>
+    <script src="@Url.Content("/Scripts/Javascripts/CommonDelete.js")" type="text/javascript"></script>
 }
