--- a/AppartmentSale/Views/Street/Index.cshtml
+++ b/AppartmentSale/Views/Street/Index.cshtml
@@ -34,7 +34,7 @@
                             @Html.ActionLink("Редактирование", "EditStreet", "Street", new { id = item.Id }, new { @class = "btn btn-success" })
                         </td>
                         <td>
-                            <a href="/Street/DeleteStreet/@item.Id" id="deleteStreet" class="btn btn-danger">Удалить</a>
+                            <a href="/Street/DeleteStreet/@item.Id" id="deleteEntity" class="btn btn-danger">Удалить</a>
                         </td>
                     </tr>
                 }
@@ -49,5 +49,5 @@
 </div>
 
 @section scripts{
-    <script src="@Url.Content("/Scripts/Javascripts/Street.js")" type="text/javascript"></script>
+    <script src="@Url.Content("/Scripts/Javascripts/CommonDelete.js")" type="text/javascript"></script>
 }
