--- a/AppartmentSale/Views/TypDocument/Index.cshtml
+++ b/AppartmentSale/Views/TypDocument/Index.cshtml
@@ -1,7 +1,51 @@
-﻿
+﻿@model PagedList.IPagedList<Domain.Data.TypeDocument>
+@using PagedList.Mvc;
+
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Список улиц";
 }
 
-<h2>Index</h2>
+<h2>Список квартир</h2>
 
+@Html.ActionLink("Добавить тип документа", "CreateTypDocument", "TypDocument", null, new { @class = "btn btn-danger" })
+
+<div class="container" style="margin-top:1rem;">
+    <div class="row">
+        <div class="col-md-12">
+            <table class="table">
+                <tr>
+                    <th>Id</th>
+                    <th>Название</th>
+                </tr>
+
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @item.Id
+                        </td>
+                        <td>
+                            @item.Name
+                        </td>
+                        <td>
+                            @Html.ActionLink("Редактирование", "EditTypeDocument", "TypDocument", new { id = item.Id }, new { @class = "btn btn-success" })
+                        </td>
+                        <td>
+                            <a href="/TypDocument/DeleteTypeDocument/@item.Id" id="deleteEntity" class="btn btn-danger">Удалить</a>
+                        </td>
+                    </tr>
+                }
+
+            </table>
+            <br />
+            Страница @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) из @Model.PageCount
+
+            @Html.PagedListPager(Model, page => Url.Action("Index", "Street", new { page }))
+        </div>
+    </div>
+</div>
+
+@section scripts{
+    <script src="@Url.Content("/Scripts/Javascripts/CommonDelete.js")" type="text/javascript"></script>
+}
