--- a/AppartmentSale/Views/Owner/Index.cshtml
+++ b/AppartmentSale/Views/Owner/Index.cshtml
@@ -3,5 +3,53 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+@using PagedList
+@model IPagedList<AppartmentSale.ViewModels.OwnerViewModel>
+<div style="margin-top:1rem;">
+    @Html.ActionLink("Добавить владельца", "CreateOwner", "Owner", null, new { @class = "btn btn-danger" })
+</div>
+@if (Model != null)
+{
+    <div class="container" style="margin-top:1rem;">
+        <div class="row">
+            <div class="col-md-12">
+                <table class="table table-condensed">
+                    <tr>
+                        <th>
+                            Полное имя
+                        </th>
+                        <th>
+                            Пол
+                        </th>
+                        <th>
+                            Дата рождения
+                        </th>
+                        <th>
+                            Данные документа
+                        </th>
+                    </tr>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>
+                                @item.FullName
+                            </td>
+                            <td>
+                                @item.Sex
+                            </td>
+                            <td>
+                                @item.BirthDay
+                            </td>
+                            <td>
+                                @item.DocumentNumber,
+                                @item.DocumentSerial
+                                @item.TypeDocument.Name
+                            </td>
+                        </tr>
+                    }
+                </table>
+            </div>
+        </div>
+    </div>
+}
 
