--- a/AppartmentSale/Views/Owner/EditOwner.cshtml
+++ b/AppartmentSale/Views/Owner/EditOwner.cshtml
@@ -1,16 +1,17 @@
 ﻿
 @{
-    ViewBag.Title = "Создание владельца";
+    ViewBag.Title = "Редактирование владельца";
 }
 
-@model AppartmentSale.ViewModels.CreateOwnerViewModel
+@model AppartmentSale.ViewModels.EditOwnerViewModel
 
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            @using (Html.BeginForm("CreateOwner", "Owner", FormMethod.Post))
+            @using (Html.BeginForm("EditOwner", "Owner", FormMethod.Post))
             {
                 @Html.AntiForgeryToken()
+                @Html.HiddenFor(p => p.Id)
                 <div class="form-group">
                     @Html.LabelFor(p => p.Name)
                     @Html.TextBoxFor(p => p.Name, new { @class = "form-control" })
@@ -32,7 +33,7 @@
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(p => p.BirthDay)
-                    @Html.TextBoxFor(p => p.BirthDay, DateTime.Now.ToShortDateString(), new { @class = "form-control" })
+                    @Html.TextBoxFor(p => p.BirthDay, Model.BirthDay.ToShortDateString(), new { @class = "form-control" })
                     @Html.ValidationMessageFor(p => p.BirthDay)
                 </div>
                 <div class="form-group">
