--- a/AppartmentSale/Views/Owner/Index.cshtml
+++ b/AppartmentSale/Views/Owner/Index.cshtml
@@ -48,6 +48,9 @@
                             <td>
                                 @Html.ActionLink("Редактировать", "EditOwner", "Owner", new { id = item.Id }, new { @class = "btn btn-success" })
                             </td>
+                            <td>
+                                <a href="/Owner/DeleteOwner/@item.Id" id="deleteEntity" class="btn btn-danger">Удалить</a>
+                            </td>
                         </tr>
                     }
                 </table>
@@ -56,3 +59,6 @@
     </div>
 }
 
+@section scripts{
+    <script src="@Url.Content("/Scripts/Javascripts/CommonDelete.js")" type="text/javascript"></script>
+}
